<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_header_main"
    android:layout_width="match_parent"
    android:layout_height="50dip"
    android:layout_gravity="center_horizontal"
    android:background="@color/main_light"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/tv_header_main_name"
        style="@style/HeaderTextView"
        android:layout_weight="2.5"
        android:text="@string/header_main_name" />

    <View style="@style/LineVertical" />

    <TextView
        android:id="@+id/tv_header_main_birthday"
        style="@style/HeaderTextView"
        android:layout_weight="3"
        android:text="@string/header_main_birthday" />

    <View style="@style/LineVertical" />

    <TextView
        android:id="@+id/tv_header_main_first_his"
        style="@style/HeaderTextView"
        android:layout_weight="3.5"
        android:text="@string/header_main_first_his" />

    <View style="@style/LineVertical" />

    <TextView
        android:id="@+id/tv_header_main_first_dis"
        style="@style/HeaderTextView"
        android:layout_weight="3.5"
        android:text="@string/header_main_first_dis" />

    <View style="@style/LineVertical" />

    <TextView
        android:id="@+id/tv_header_main_first_doc"
        style="@style/HeaderTextView"
        android:layout_weight="3"
        android:text="@string/header_main_first_doc" />

    <View style="@style/LineVertical" />

    <TextView
        android:id="@+id/tv_header_main_recordid"
        style="@style/HeaderTextView"
        android:layout_weight="4"
        android:text="@string/header_main_recordID" />
</LinearLayout>