<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="45dip"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/tv_item_diagnosistime"
        style="@style/ItemTextView"
        android:layout_weight="1"
        android:text="@string/header_recordchoose_Diagnosistime" />

    <View style="@style/LineVertical" />

    <TextView
        android:id="@+id/tv_item_diagnosiscount"
        style="@style/ItemTextView"
        android:layout_weight="1"
        android:text="@string/header_recordchoose_Diagnosiscount" />

    <View style="@style/LineVertical" />

    <TextView
        android:id="@+id/tv_item_doctor"
        style="@style/ItemTextView"
        android:layout_weight="1"
        android:text="@string/header_recordchoose_Doctor" />

</LinearLayout>