<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="60dp"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/tv_item_remind_name"
        style="@style/ItemMain"
        android:layout_weight="5"
        android:text="@string/header_remind_name" />

    <View style="@style/LineVertical" />

    <RelativeLayout
        style="@style/ItemMain"
        android:layout_weight="5"
        android:gravity="center">

        <TextView
            android:id="@+id/tv_item_remind_timeout"
            android:layout_width="50dp"
            android:layout_height="45dp"
            android:background="@mipmap/clock_color"
            android:gravity="center"
            android:text="1" />
    </RelativeLayout>

    <View style="@style/LineVertical" />

    <TextView
        android:id="@+id/tv_item_remind_way"
        style="@style/ItemMain"
        android:layout_weight="7"
        android:text="@string/header_remind_way" />

    <View style="@style/LineVertical" />

    <TextView
        android:id="@+id/tv_item_remind_timestart"
        style="@style/ItemMain"
        android:layout_weight="7"
        android:text="@string/header_remind_timestart" />

    <View style="@style/LineVertical" />

    <TextView
        android:id="@+id/tv_item_remind_timeend"
        style="@style/ItemMain"
        android:layout_weight="7"
        android:text="@string/header_remind_timeend" />

</LinearLayout>