<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/header_physical" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/grey_line">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="10dp"
                android:paddingTop="10dp">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/ItemRecordTextView"
                        android:layout_weight="1"
                        android:text="@string/tv_physical_xy" />

                    <TextView style="@style/StarTextView" />

                    <LinearLayout
                        style="@style/ItemEditLayout"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginRight="60dp"
                        android:layout_weight="2"
                        android:orientation="horizontal">

                        <EditText
                            style="@style/ItemLayoutEdit"
                            android:layout_weight="2" />

                        <TextView
                            style="@style/ItemMain"
                            android:layout_gravity="center_vertical|right"
                            android:layout_weight="1"
                            android:text="@string/tv_unit_physical_xy" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/ItemRecordTextView"
                        android:layout_weight="1"
                        android:text="@string/tv_physical_xl" />

                    <TextView style="@style/StarTextView" />

                    <LinearLayout
                        style="@style/ItemEditLayout"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginRight="60dp"
                        android:layout_weight="2"
                        android:orientation="horizontal">

                        <EditText
                            style="@style/ItemLayoutEdit"
                            android:layout_weight="2" />

                        <TextView
                            style="@style/ItemMain"
                            android:layout_gravity="center_vertical|right"
                            android:layout_weight="1"
                            android:text="@string/tv_unit_physical_xl" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <View style="@style/LineHorizontal" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="10dp"
                android:paddingTop="10dp">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/ItemRecordTextView"
                        android:layout_weight="1"
                        android:text="@string/tv_physical_jl" />

                    <TextView style="@style/StarTextView" />

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginRight="60dp"
                        android:layout_weight="2"
                        android:gravity="center_vertical|left"
                        android:orientation="horizontal">

                        <com.shwootide.metabolictreat.widget.nicespinner.NiceSpinner
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="5dp"
                            android:layout_marginTop="5dp"
                            android:gravity="center"
                            android:textSize="@dimen/headerTextSize" />
                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/ItemRecordTextView"
                        android:layout_weight="1"
                        android:text="@string/tv_physical_tz" />

                    <TextView style="@style/StarTextView" />

                    <LinearLayout
                        style="@style/ItemEditLayout"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginRight="60dp"
                        android:layout_weight="2"
                        android:orientation="horizontal">

                        <EditText
                            android:id="@+id/et_physical_tz"
                            style="@style/ItemLayoutEdit"
                            android:layout_weight="2"
                            android:inputType="numberDecimal" />

                        <TextView
                            style="@style/ItemMain"
                            android:layout_gravity="center_vertical|right"
                            android:layout_weight="1"
                            android:text="@string/tv_unit_physical_tz" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>


            <View style="@style/LineHorizontal" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="10dp"
                android:paddingTop="10dp">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/ItemRecordTextView"
                        android:layout_weight="1"
                        android:text="@string/tv_physical_sg" />

                    <TextView style="@style/StarTextView" />

                    <LinearLayout
                        style="@style/ItemEditLayout"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginRight="60dp"
                        android:layout_weight="2"
                        android:orientation="horizontal">

                        <EditText
                            android:id="@+id/et_physical_sg"
                            style="@style/ItemLayoutEdit"
                            android:layout_weight="2"
                            android:inputType="numberDecimal" />

                        <TextView
                            style="@style/ItemMain"
                            android:layout_gravity="center_vertical|right"
                            android:layout_weight="1"
                            android:text="@string/tv_unit_physical_sg" />
                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/ItemRecordTextView"
                        android:layout_weight="1"
                        android:text="@string/tv_physical_bmi" />

                    <TextView style="@style/StarTextView" />

                    <LinearLayout
                        style="@style/ItemEditLayout"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginRight="60dp"
                        android:layout_weight="2"
                        android:orientation="horizontal">

                        <EditText
                            android:id="@+id/tv_physical_bmi"
                            style="@style/ItemLayoutEdit"
                            android:layout_weight="2" />

                        <TextView
                            style="@style/ItemMain"
                            android:layout_gravity="center_vertical|right"
                            android:layout_weight="1"
                            android:text="@string/tv_unit_physical_bmi" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>


            <View style="@style/LineHorizontal" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="10dp"
                android:paddingTop="10dp">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/ItemRecordTextView"
                        android:layout_weight="1"
                        android:text="@string/tv_physical_yw" />

                    <TextView style="@style/StarTextView" />


                    <LinearLayout
                        style="@style/ItemEditLayout"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginRight="60dp"
                        android:layout_weight="2"
                        android:orientation="horizontal">

                        <EditText
                            style="@style/ItemLayoutEdit"
                            android:layout_weight="2" />

                        <TextView
                            style="@style/ItemMain"
                            android:layout_gravity="center_vertical|right"
                            android:layout_weight="1"
                            android:text="@string/tv_unit_physical_yw" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/ItemRecordTextView"
                        android:layout_weight="1"
                        android:text="@string/tv_physical_xzsz" />

                    <TextView style="@style/StarTextView" />

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginRight="60dp"
                        android:layout_weight="2"
                        android:gravity="center_vertical|left"
                        android:orientation="horizontal">

                        <com.shwootide.metabolictreat.widget.nicespinner.NiceSpinner
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="5dp"

                            android:layout_marginTop="5dp"
                            android:gravity="center"
                            android:textSize="@dimen/headerTextSize" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <View style="@style/LineHorizontal" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:weightSum="2">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/ItemRecordTextView"
                        android:layout_weight="1"
                        android:text="@string/tv_physical_zbdm" />

                    <TextView style="@style/StarTextView" />

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginRight="60dp"
                        android:layout_weight="2"
                        android:gravity="center_vertical|left"
                        android:orientation="horizontal">

                        <com.shwootide.metabolictreat.widget.nicespinner.NiceSpinner
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="5dp"
                            android:layout_marginTop="5dp"
                            android:gravity="center"
                            android:textSize="@dimen/headerTextSize" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>