<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/main_bg"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/iv_record"
        android:layout_width="140dp"
        android:layout_height="130dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="170dp"
        android:src="@mipmap/logo" />

    <View
        android:id="@+id/v_record"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@+id/iv_record"
        android:background="@color/main_dark" />

    <Button
        android:id="@+id/btn_record"
        android:layout_width="200dp"
        android:layout_height="45dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/v_record"
        android:layout_centerVertical="true"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="10dp"
        android:background="@mipmap/btn_newrecord"
        android:text="选择疾病"
        android:textColor="@android:color/white"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btn_departmentchoose_dm"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_below="@+id/btn_record"
        android:layout_centerHorizontal="true"
        android:background="@drawable/btn_common_bg"
        android:text="@string/btn_choose_nfm"
        android:textColor="@android:color/white"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btn_departmentchoose_jzx"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/btn_departmentchoose_dm"
        android:layout_marginTop="30dp"
        android:background="@drawable/btn_common_bg"
        android:text="@string/btn_choose_fs"

        android:textColor="@android:color/white"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btn_departmentchoose_pcos"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/btn_departmentchoose_jzx"
        android:layout_marginTop="30dp"
        android:background="@drawable/btn_common_bg"
        android:text="@string/btn_choose_xn"
        android:textColor="@android:color/white"
        android:textSize="20sp" />

</RelativeLayout>