<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/login_bg"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/tv_login_logo"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="170dp"
        android:src="@mipmap/logo" />

    <ImageView
        android:id="@+id/tv_login_title"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_below="@+id/tv_login_logo"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:src="@mipmap/title" />

    <LinearLayout
        android:id="@+id/ll_login_name"
        android:layout_width="430dp"
        android:layout_height="60dp"
        android:layout_below="@+id/tv_login_title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dip"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@mipmap/input_l"
            android:gravity="center"
            android:text="用户名"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/et_login_username"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@mipmap/input_r"
            android:hint="@string/et_hint_login_username"
            android:paddingLeft="20dp"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:paddingRight="10dp"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_login_pwd"
        android:layout_width="430dp"
        android:layout_height="60dp"
        android:layout_below="@+id/ll_login_name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dip"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@mipmap/input_l"
            android:gravity="center"
            android:text="密码"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/et_login_password"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:background="@mipmap/input_r"
            android:hint="@string/et_hint_login_password"
            android:paddingLeft="20dp"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:paddingRight="10dp"
            android:textSize="20sp" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="430dp"
        android:layout_height="60dp"
        android:layout_below="@+id/ll_login_pwd"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dip"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/cb_login"
            android:layout_alignParentLeft="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:checked="true"
            android:text="@string/cb_login" />

        <Button
            android:id="@+id/btn_login"
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_centerVertical="true"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_common_bg"
            android:textColor="@android:color/white"
            android:text="@string/btn_login" />
    </RelativeLayout>

</RelativeLayout>